--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+<link rel="shortcut icon" href="img/favicon/logo.ico" >
 <head>
 
   <meta charset="utf-8">
@@ -8,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Intituto Transire - QA</title>
+  <title>Instituto Transire - QA</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -26,7 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Instituto Transire - QA</a>
+      <a class="navbar-brand js-scroll-trigger" href="">Instituto Transire - QA</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
         type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -36,10 +37,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Ferramentas</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#Ferramentas">Ferramentas</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Sobre</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#Sobre">Sobre</a>
           </li>
         </ul>
       </div>
@@ -59,7 +60,7 @@
   </header>
 
   <!-- Portfolio Section -->
-  <section class="page-section portfolio" id="portfolio">
+  <section class="page-section portfolio" id="Ferramentas">
     <div class="container">
 
       <!-- Portfolio Section Heading -->
@@ -171,7 +172,7 @@
   
 
       <!-- About Section Heading -->
-      <h2 id="sobre" class="text-center text-uppercase text-white" style="padding-top: 10px !important;">Sobre</h2>
+      <h2 id="Sobre" class="text-center text-uppercase text-white" style="padding-top: 10px !important;">Sobre</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
