--- a/sitee.html
+++ b/sitee.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-
+  <base target=’_blank’/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -80,7 +80,7 @@
         <!-- Portfolio Item 1 -->
         <div class="col-md-6 col-lg-4">
 
-          <a href="http://172.100.10.59/mantis/login_page.php"><img class="img-fluid teste-img"
+          <a target="blank" href="http://172.100.10.59/mantis/login_page.php"><img class="img-fluid teste-img"
               src="img/portfolio/mantis.png"></a>
           <!-- </div> -->
         </div>
@@ -96,7 +96,7 @@
         <!-- Portfolio Item 3 -->
         <div class="col-md-6 col-lg-4">
 
-          <a href="http://qa.itbam.org.br:8080/login?from=%2F"><img class="img-fluid teste-img"
+          <a target="blank" href="http://qa.itbam.org.br:8080/login?from=%2F"><img class="img-fluid teste-img"
               src="img/portfolio/jenkins.png"></a>
 
         </div>
@@ -108,7 +108,7 @@
                 <i class="fas fa-plus fa-1x"></i>
               </div>
             </div>
-            <a href="http://qa.itbam.org.br:9000"><img class="img-fluid teste-img" src="img/portfolio/sonar.png"
+            <a target="blank" href="http://qa.itbam.org.br:9000"><img class="img-fluid teste-img" src="img/portfolio/sonar.png"
                 alt=""></a>
           </div>
         </div>
@@ -121,7 +121,7 @@
                 <i class="fas fa-plus fa-1x"></i>
               </div>
             </div>
-            <a href="http://qa.itbam.org.br:9001/#/auth"><img class="img-fluid teste-img"
+            <a target="blank" href="http://qa.itbam.org.br:9001/#/auth"><img class="img-fluid teste-img"
                 src="img/portfolio/portainer.png" width="85%"></a>
           </div>
         </div>
@@ -134,7 +134,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjFlMmY1ZDEtYTYxOS00ZDY4LWIyYzQtMjYwOTlmNzgzYzI4IiwidCI6IjE5YTUzOTM1LTA2MTgtNGVkOC04Y2UxLTlkZmY2YzllYzEwYiJ9"><img class="img-fluid teste-img" src="img/portfolio/BI.png"
+            <a target="blank" href="https://app.powerbi.com/view?r=eyJrIjoiMjFlMmY1ZDEtYTYxOS00ZDY4LWIyYzQtMjYwOTlmNzgzYzI4IiwidCI6IjE5YTUzOTM1LTA2MTgtNGVkOC04Y2UxLTlkZmY2YzllYzEwYiJ9"><img class="img-fluid teste-img" src="img/portfolio/BI.png"
                 width="85%"></a>
           </div>
         </div>
@@ -147,7 +147,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <a href="https://itbam.sharepoint.com/sites/teamqa2"><img class="img-fluid teste-img"
+            <a target="blank" href="https://itbam.sharepoint.com/sites/teamqa2"><img class="img-fluid teste-img"
                 src="img/portfolio/sharepoint.png" width="82%"></a>
           </div>
         </div>
