alteração link mantis

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Portfolio Item 1 -->
         <div class="col-md-6 col-lg-4">
 
-          <a href="http://172.100.10.59/mantis/login_page.php"><img class="img-fluid teste-img"
+          <a href="http://qa.itbam.org.br:82"><img class="img-fluid teste-img"
               src="img/portfolio/mantis.png"></a>
           <!-- </div> -->
         </div>
