alteração de links

--- a/index.html
+++ b/index.html
@@ -155,6 +155,34 @@
             </div>
           </div>
         </div>
+
+        <!-- SERVIÇO AGENDAMENTO DE SALAS -->
+        <div class="col-md-6 col-lg-4">
+          <div>
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <!-- <a target="_blank" href="http://qa.itbam.org.br:8080/login?from=%2F" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/jenkins.png" alt="Automatizador de Tarefas"></a> -->  
+            </div>
+          </div>
+        </div>
+
+        <!-- SERVIÇO HIRO -->
+        <div class="col-md-6 col-lg-4">
+          <div>
+            <div style="padding-top: 10%; class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+             <!-- <a target="_blank" href="" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/BI.png" alt="Ferramenta de controle de horários"></a> --> 
+            </div>
+          </div>
+        </div>
+
+        <!-- SERVIÇO  -->
+        <div class="col-md-6 col-lg-4">
+          <div>
+            <div style="padding-top: 10%; class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+             <!-- <a target="_blank" href="http://qa.itbam.org.br:9001" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/portainer.png" alt="Gerenciador de Containers Docker"></a> --> 
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
