--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- SERVIÇO SONAR -->
         <div class="col-md-6 col-lg-4">
           <div>
-            <div style="padding-top: 5%; class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div style="padding-top: 5%;" class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <a target="_blank" href="http://qa.itbam.org.br:9000" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/sonar.png" alt="Serviço de Scan para Qualidade de Codigo"></a>
             </div>
           </div>
@@ -141,7 +141,7 @@
         <!-- SERVIÇO POWERBI -->
         <div class="col-md-6 col-lg-4">
           <div>
-            <div style="padding-top: 10%; class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div style="padding-top: 10%;" class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <a target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMjFlMmY1ZDEtYTYxOS00ZDY4LWIyYzQtMjYwOTlmNzgzYzI4IiwidCI6IjE5YTUzOTM1LTA2MTgtNGVkOC04Y2UxLTlkZmY2YzllYzEwYiJ9" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/BI.png" alt="Dashboard de Informações Time QA"></a>
             </div>
           </div>
@@ -150,7 +150,7 @@
         <!-- SERVIÇO PORTAINER -->
         <div class="col-md-6 col-lg-4">
           <div>
-            <div style="padding-top: 10%; class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div style="padding-top: 10%;" class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <a target="_blank" href="http://qa.itbam.org.br:9001" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/portainer.png" alt="Gerenciador de Containers Docker"></a>
             </div>
           </div>
@@ -168,7 +168,7 @@
         <!-- SERVIÇO HIRO -->
         <div class="col-md-6 col-lg-4">
           <div>
-            <div style="padding-top: 10%; class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div style="padding-top: 10%;" class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
              <!-- <a target="_blank" href="" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/BI.png" alt="Ferramenta de controle de horários"></a> --> 
             </div>
           </div>
@@ -177,7 +177,7 @@
         <!-- SERVIÇO  -->
         <div class="col-md-6 col-lg-4">
           <div>
-            <div style="padding-top: 10%; class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div style="padding-top: 10%;" class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
              <!-- <a target="_blank" href="http://qa.itbam.org.br:9001" rel="noopener noreferrer"><img class="img-fluid teste-img" src="img/portfolio/portainer.png" alt="Gerenciador de Containers Docker"></a> --> 
             </div>
           </div>
